clients/tui/src/ui/snapshots/mp_tui__ui__golden_frames__golden_contacts_view.snap
---
source: clients/tui/src/ui/golden_frames.rs
expression: "frame_snapshot(&mut app, WIDTH, HEIGHT)"
---
== text 120x40 (trailing spaces trimmed) ==
00 |╭ Contacts (3) ──────────────────────────╮╭ Details ───────────────────────────────────────────────────────────────────╮
01 |│/ type / to search                      ││Planung Müller                                                              │
02 |│Planung Müller <planung@example.org>    ││                                                                            │
03 |│Anna Weber <anna.weber@example.com>     ││Email      planung@example.org                                              │
04 |│Buchhaltung <buchhaltung@example.org>   ││Interactionssent-to 12, cc 3, received 20                                   │
05 |│                                        ││First seen 2026-01-04                                                       │
06 |│                                        ││Last seen  2026-07-28                                                       │
07 |│                                        ││                                                                            │
08 |│                                        ││Enter compose · v vCard · r refresh                                         │
09 |│                                        ││                                                                            │
10 |│                                        ││                                                                            │
11 |│                                        ││                                                                            │
12 |│                                        ││                                                                            │
13 |│                                        ││                                                                            │
14 |│                                        ││                                                                            │
15 |│                                        ││                                                                            │
16 |│                                        ││                                                                            │
17 |│                                        ││                                                                            │
18 |│                                        ││                                                                            │
19 |│                                        ││                                                                            │
20 |│                                        ││                                                                            │
21 |│                                        ││                                                                            │
22 |│                                        ││                                                                            │
23 |│                                        ││                                                                            │
24 |│                                        ││                                                                            │
25 |│                                        ││                                                                            │
26 |│                                        ││                                                                            │
27 |│                                        ││                                                                            │
28 |│                                        ││                                                                            │
29 |│                                        ││                                                                            │
30 |│                                        ││                                                                            │
31 |│                                        ││                                                                            │
32 |│                                        ││                                                                            │
33 |╰────────────────────────────────────────╯│                                                                            │
34 |╭ View ──────────────────────────────────╮│                                                                            │
35 |│     mail  |  contacts  |  calendar     ││                                                                            │
36 |╰────────────────────────────────────────╯╰────────────────────────────────────────────────────────────────────────────╯
37 |╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
38 |│ CONTACTS   j/k Navigate contacts  / Fuzzy search  Enter / n Compose  v Send vCard  c Copy email  r Refresh           │
39 |╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
== style runs (col ranges are half-open; rows with no meaning-carrying style are omitted) ==
01 |bold@43..57
02 |bg:surface+fg:selection+bold@1..41
35 |bold@14..24
38 |bold@1..11 bold@13..16 bold@36..37 bold@52..61 bold@71..72 bold@85..86 bold@99..100
