clients/tui/src/ui/snapshots/mp_tui__ui__golden_frames__golden_drafts_view_with_a_parse_skip.snap
---
source: clients/tui/src/ui/golden_frames.rs
expression: "frame_snapshot(&mut app, WIDTH, HEIGHT)"
---
== text 120x40 (trailing spaces trimmed) ==
00 |╭ Mail ──────────────────────────────────╮╭ Headers ───────────────────────────────────────────────────────────────────╮
01 |│  󰅲 Inbox  5                            ││ From:                                                                      │
02 |│> 󰏫 Drafts  2                           ││ To:                                                                        │
03 |│  󰑫 Sent 41                             ││ Subj: 2026-07-30-reply-to-anna.md                                          │
04 |│  󰄼 Archive 128                         ││ Date: 2026-07-30  [error]                                                  │
05 |│                                        ││                                                                            │
06 |╰────────────────────────────────────────╯╰────────────────────────────────────────────────────────────────────────────╯
07 |╭ Drafts ────────────────────────────────╮╭ Body ──────────────────────────────────────────────────────────────────────╮
08 |│   DATE       SUBJECT                   ││This draft could not be parsed, so it is not listed.                        │
09 |│   2026-07-30  2026-07-30-reply-to-an… ││                                                                            │
10 |│   2026-07-29 Re: Statusbericht KW31    ││/home/u/.local/share/mailypoppins/work/drafts/2026-07-30-reply-to-anna.md   │
11 |│                                        ││                                                                            │
12 |│                                        ││Parse error:                                                                │
13 |│                                        ││Failed to parse frontmatter: attachments[0]: invalid type: string "/x"      │
14 |│                                        ││                                                                            │
15 |│                                        ││Press Enter/e to open the raw file in $EDITOR and fix its frontmatter.      │
16 |│                                        ││                                                                            │
17 |│                                        ││                                                                            │
18 |│                                        ││                                                                            │
19 |│                                        ││                                                                            │
20 |│                                        ││                                                                            │
21 |│                                        ││                                                                            │
22 |│                                        ││                                                                            │
23 |│                                        ││                                                                            │
24 |│                                        ││                                                                            │
25 |│                                        ││                                                                            │
26 |│                                        ││                                                                            │
27 |╰────────────────────────────────────────╯│                                                                            │
28 |╭ Activity ──────────────────────────────╮│                                                                            │
29 |│  No activity yet                       ││                                                                            │
30 |│                                        ││                                                                            │
31 |│                                        ││                                                                            │
32 |│                                        ││                                                                            │
33 |╰────────────────────────────────────────╯│                                                                            │
34 |╭ View ──────────────────────────────────╮│                                                                            │
35 |│     mail  |  contacts  |  calendar     ││                                                                            │
36 |╰────────────────────────────────────────╯╰────────────────────────────────────────────────────────────────────────────╯
37 |╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
38 |│ MAIL   j/k Navigate  v Select  J / K Next/prev  Enter / e Open (read-only)  r Reply  a Archive  d Delete  Esc Back   │
39 |╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
== style runs (col ranges are half-open; rows with no meaning-carrying style are omitted) ==
01 |bold@43..50
02 |bold@43..48
03 |bold@43..50
04 |bold@43..50
09 |bg:surface+fg:selection+bold@1..41
35 |bold@5..11
38 |bold@1..7 bold@9..12 bold@23..24 bold@33..38 bold@50..59 bold@78..79 bold@87..88 bold@98..99 bold@108..111
